--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "ovrui": "^1.1.0",
     "react": "~15.4.1",
     "react-native": "~0.42.0",
-    "three": "^0.80.1",
     "react-vr": "^1.1.0",
-    "react-vr-web": "^1.1.0"
+    "react-vr-web": "^1.1.0",
+    "three": "^0.80.1"
   },
   "devDependencies": {
     "babel-jest": "^19.0.0",
